@@ -1,3 +1,7 @@
+2011-06-10  Xavier Perseguers  <xavier@causal.ch>
+
+	* [FEATURE] #27344: Add support for block ranges
+
 2011-06-06  Xavier Perseguers  <xavier@causal.ch>
 
 	* [FEATURE] #27263: Add "Select all/none" for blocks
